# configurations

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
commitlint/: BUILD.bazel  package.json  tsconfig.json
