load(
  "@bazel_tools//tools/build_defs/repo:http.bzl",
  "http_archive"
)
http_archive(
  name = "aspect_rules_js",
  sha256 = "1aa0ab76d1f9520bb8993e2d84f82da2a9c87da1e6e8d121dbb4c857a292c2cd",
  strip_prefix = "rules_js-1.20.1",
  url = "https://github.com/aspect-build/rules_js/releases/download/v1.20.1/rules_js-v1.20.1.tar.gz",
)

load(
  "@aspect_rules_js//js:repositories.bzl",
  "rules_js_dependencies"
)
rules_js_dependencies()

load(
  "@rules_nodejs//nodejs:repositories.bzl",
  "nodejs_register_toolchains"
)
nodejs_register_toolchains(
    name = "nodejs",
    node_version = "19.0.0",
)

load(
  "@aspect_rules_js//npm:npm_import.bzl",
  "npm_translate_lock"
)
npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load(
  "@npm//:repositories.bzl",
  "npm_repositories"
)
npm_repositories()
