load(
  "@aspect_rules_esbuild//esbuild:defs.bzl",
  "esbuild"
)
esbuild(
  name = "bundle",
  srcs = ["src/index.ts"],
  entry_point = "src/index.ts",
  external = ["@commitlint/types"],
  format = 'esm',
  minify = True,
  splitting = True
)

load(
  "@aspect_bazel_lib//lib:output_files.bzl",
  "output_files"
)
output_files(
  name = "bundle_directory",
  target = ":bundle",
  paths = ["commitlint/bundle"],
)

load(
  "@aspect_bazel_lib//lib:directory_path.bzl",
  "directory_path"
)
directory_path(
  name = "index_directory_path",
  directory = ":bundle_directory",
  path = "index.js",
)

load(
  "@aspect_bazel_lib//lib:copy_file.bzl",
  "copy_file"
)
copy_file(
    name = "index",
    src = ":index_directory_path",
    out = "index.js"
)

genrule(
    name = "modified_package_json",
    srcs = ["package.json"],
    outs = ["modified-package.json"],
    cmd = "cat package.json | jq 'del(.devDependencies, .scripts)' > modified-package.json",
    stamp = True
)

load(
  "@aspect_bazel_lib//lib:copy_to_directory.bzl",
  "copy_to_directory"
)
copy_to_directory(
    name = "dist",
    srcs = [
      "//:LICENSE.md",
      ":modified_package_json",
      ":index"
    ],
)
